--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Portfólio - Ana Paula Benjamin" />
-  <link rel="icon" type="image/svg+xml" href="benjamin.svg" />
+  <link rel="icon" type="image/svg+xml" href="./public/benjamin.svg" />
   <title>Ana Paula Benjamin</title>
 </head>
 
