--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Portfólio - Ana Paula Benjamin" />
+  <meta name="description" content="Desenvolvedora Front-end & UI Designer" />
+  <meta name="creator" content="Ana Paula Benjamin">
+  <meta name="author" content="Ana Paula Benjamin">
+  <meta name="copyright" content="Portfólio - Ana Paula Benjamin">
   <link rel="icon" type="image/svg+xml" href="./public/benjamin.svg" />
   <title>Ana Paula Benjamin</title>
 </head>
